fiw display bug on ie

--- a/public/templates/journees/css/style-ie.css
+++ b/public/templates/journees/css/style-ie.css
@@ -291,6 +291,9 @@ background-image: url('../images/headerLogo.png');
 #home-text
 {
 	width:400px;
+	display:block;
+	z-index:100;
+	border:solid red;
 	position:absolute;
 	margin-left:600px;
 	margin-top:60px;
